chore(allium): cleanup